Edited auth api response